# Perception

./: .gitignore  README.md  new-structure.txt
backend/: .dockerignore  api_docs.json  configurations.py  main.py  pyproject.toml  qs_schema.json  requirements.txt  sample_qs.json  system_params.py
backend/app/: __init__.py  config.py  database.py  main.py  system_params.py
backend/app/auth/: dependencies.py  model.py  route.py  schemas.py  service.py
backend/app/database/: __init__.py  connections.py
backend/app/evaluations/: route.py  schemas.py  service.py
backend/app/models/: models.py  system_params.py
backend/app/papers/: model.py  route.py  schemas.py  service.py
backend/app/routes/: __init__.py  association.py  auth.py  evaluation.py  papers.py  types.py
backend/app/submissions/: model.py  route.py  schemas.py  service.py
backend/app/utils/: __init__.py  evaluator.py  keys.py  logging.py  routelogger.py  vars.py
backend/database/: connections.py  models.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_evaluator.py  test_papers.py  test_submissions.py
backendv2/: .env.example  Dockerfile  main.py  pyproject.toml
backendv2/app/: config.py  database.py  dependencies.py
backendv2/app/auth/: dependencies.py  model.py  route.py  schemas.py  service.py
backendv2/app/core/: model.py
backendv2/app/evaluations/: schemas.py  service.py
backendv2/app/models/: __init__.py  enums.py  paper.py  submission.py  user.py
backendv2/app/papers/: model.py  route.py  (+2 more)
backendv2/tests/: conftest.py  test_auth.py  test_evaluation.py
(+80 files in other folders)
