[project]
name = "perception-backend"
version = "1.0.0"
description = "Backend for Perception application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "groq>=1.1.2",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
